Fix buttons/text alignment

--- a/css/leshan.css
+++ b/css/leshan.css
@@ -84,7 +84,7 @@ header {
 }
 
 header .container {
-    padding-top: 100px;
+    padding-top: 150px;
     padding-bottom: 50px;
 }
 
@@ -108,8 +108,8 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     header .container {
-        padding-top: 200px;
-        padding-bottom: 100px;
+        padding-top: 150px;
+        padding-bottom: 50px;
     }
 
     header .intro-text .name {
@@ -357,4 +357,18 @@ footer a {
 
 .scroll-top .btn:focus {
     outline: 0;
+}
+
+/* custom */
+
+.button-links {
+    padding-top: 10px;
+}
+
+#slideshare {
+    padding-top: 10px;
+}
+
+#tuto-desc {
+    padding-top: 150px;
 }
